--- a/Flask/app/templates/error.html
+++ b/Flask/app/templates/error.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>I Learn Docker!</title>
+    <title>Error page</title>
 </head>
 <body>
-    <h1>andreishvedau/nginx:12-ubuntu</h1>   
+    Can't print the IP address of the container
 </body>
 </html>
